fixed navbar full screen flicker on mobile devices

--- a/src/app/shared-components/global-nav/global-nav.component.scss
+++ b/src/app/shared-components/global-nav/global-nav.component.scss
@@ -1,5 +1,4 @@
 .nav-container {
-  height: 100%;
   background-color: transparent;
   display: flex;
   justify-content: center;
@@ -42,7 +41,7 @@
 
 @keyframes stickyNav {
   from {
-    height: 1%;
+    height: 50px;
     background-color: transparent;
   }
   to {
@@ -117,9 +116,12 @@
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-  .nav-collapsed {
-    display: none;
+  .nav-container {
+    height: 100%;
+    .nav-collapsed {
+      display: none;
+    }
   }
 }
 
-// <editor-fold>
+// </editor-fold>
